# penetration-testing

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  research.md
docker/: api.Dockerfile  frontend.Dockerfile  postgres-dev.conf
docker/nginx/: nginx.conf  ssl.conf
docker/scripts/: gen-dev-certs.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: FindingsTable.tsx  Layout.tsx  ScanProgress.tsx  SeverityChart.tsx
frontend/src/pages/: Dashboard.tsx  EngagementDetail.tsx  Engagements.tsx  Findings.tsx  Login.tsx  Scans.tsx
frontend/src/stores/: scanStore.ts
migrations/: env.py
migrations/versions/: 001_full_blueprint.py  002_indexes_softdelete_reports.py  003_remove_auth.py
src/api/: app.py  auth.py  deps.py  middleware.py
src/api/routers/: compliance.py  credentials.py  engagements.py  exploits.py  findings.py  reports.py  resilience.py  scans.py  schedules.py  targets.py  ws.py
src/cli/: app.py  findings.py  reports.py  scans.py  schedules.py  targets.py
src/core/: audit.py  beat_scheduler.py  config.py  database.py  defectdojo.py  diffing.py  models.py  schemas.py  scope.py  scoring.py  scoring_vpr.py  tasks.py  token_store.py
src/core/compliance/: mapper.py  mappings.py
src/core/credstuff/: detector.py
src/core/ddos/: controller.py
src/core/export/: sarif.py
src/core/hibp/: checker.py
src/core/metasploit/: client.py  parser.py
src/core/reports/: generator.py
src/core/reports/templates/: base.html  executive.html  full.html
src/core/scanning/: amass.py  ffuf.py  headers.py  masscan.py  nikto.py  nmap.py  nuclei.py  runner.py  sanitize.py  sqlmap.py  sslyze_scan.py  subfinder.py  wpscan.py  zap.py
src/worker/: celery_app.py
tests/: conftest.py  test_parsers.py  test_sanitize.py  test_scope.py  test_scope_integration.py
